# pc-controller

./: .gitignore  README.md
client/: client.py
server/: CMakeLists.txt  server.cpp
server/include/: command.h  command_status.h  server.h  server_config.h
server/include/commands/: .volume_down_command.h.swp  battery_percentage_command.h  battery_precentage_command.h  get_volume_command.h  launch_application_command.h  launch_firefox_command.h  launch_telegram_command.h  launch_thunderbird_command.h  mute_volume_command.h  open_protonvpn_command.h  poweroff_command.h  reboot_command.h  uptime_command.h  volume_control_command.h  volume_down_command.h  volume_up_command.h
server/src/: command_status.cpp  main.cpp  server.cpp  server_config.cpp
server/src/commands/: .tem.swp  battery_precentage_command.cpp  launch_application_command.cpp  uptime_command.cpp  volume_control_command.cpp
